# hermano-template

./: .gitignore  LICENSE  README.md  bootstrap.sh  docker-compose.yml
server/: Dockerfile  pyproject.toml
server/app/: admin.py  models.py  urls.py  views.py
server/main/: settings.py  urls.py
server/static/: index.html
web/: .eslintrc.cjs  .eslintrc.json  Dockerfile  package-lock.json  package.json  prettier.config.mjs  tailwind.config.ts  vite.config.ts
web/src/: app.tsx  theme.ts
web/src/components/: Brand.tsx
web/src/layouts/: base.tsx
web/src/pages/: _app.tsx  _document.tsx  index.tsx
web/src/styles/: global.css
