[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["mihilmy"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = "^4.2.7"
psycopg2 = "^2.9.9"
inertia-django = "^0.5.3"
django-vite = "2.x"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
